Fix gap

--- a/styles/adsListCard.module.scss
+++ b/styles/adsListCard.module.scss
@@ -6,6 +6,7 @@
     align-items: center;
     gap: 1rem;
     padding: 1.25rem 2rem;
+    margin: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 18px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
